overflow problems fixed by chrome. fixed #23

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,7 +19,7 @@
 
 html, body {
   height:100%;
-  overflow:auto;
+  /*overflow:auto;*/
   margin-bottom: 0 !important;
 }
 
